# DemoAnamolyDetection

./: .gitignore  EXECUTION_GUIDE.md  INSTALL.md  QUICK_REFERENCE.md  README.md  README_Branches.md  VALIDATION_GUIDE.md  install_validation.sh  mlflow_logger.py  pyproject.toml  requirements.txt  run_validation_pipeline.py  setup.py  setup_watchtower.sh  validate_data.py  validation_config.py
artifacts/: feature_order.json  onehot.joblib  scaler.joblib
configs/: ensemble_config.yaml  feature_config.yaml  lstm_config.yaml  preprocessing_config.yaml  xgboost_config.yaml
data/: SUTD_VERSION.txt
data/parquet/: X.npy  X_lstm.npy  clean_data.parquet  features_table.parquet  groups_lstm.npy  meta_ts.npy  preprocessing_features.csv  windows.csv  windows.parquet  y.npy
data/raw/: .gitignore  sutd.dvc
logs/pipeline_runs/: pipeline_metadata_20260209_154245.json
scripts/: run_build_features.py  run_ensemble_training.py  run_etl_pipeline.py  run_false_alarm_investigation.py  run_full_training_pipeline.sh  run_lstm_data_prep.py  run_lstm_training.py  run_optuna_tuning.py  run_preprocessing_pipeline.py  run_validation_pipeline.py  run_windowing_pipeline.py  run_xgboost_training.py
src/watchtower/analysis/: __init__.py  investigate_false_alarms.py
src/watchtower/data/: __init__.py  etl_config.py  etl_pipeline.py  validate_data.py  validation_config.py  windowing_config.py  windowing_pipeline.py
src/watchtower/features/: __init__.py  build_features.py  build_features_config.py  preprocessing_pipeline.py
src/watchtower/models/: __init__.py  ensemble_voting.py  (+4 more)
(+2 files in other folders)
